--- a/.github/workflows/test_tweet.yml
+++ b/.github/workflows/test_tweet.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
-      - name : Install dependecies
+          python-version: 3.11
+      - name: Install dependecies
         run: |
-          pip install -e .
+          python setup.py install
           pip install tweepy
 
       - name: Tweet Stats
