--- a/.github/workflows/daily_mapherworld.yml
+++ b/.github/workflows/daily_mapherworld.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.11
 
       - name: Install Osmium
         run: sudo apt-get install -y osmium-tool
@@ -21,14 +21,13 @@ jobs:
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
-          pip install -e . 
+          python setup.py install 
           pip install tweepy
           pip install -r requirements.txt
       - name: Generate Daily Hashtag mapherworld Stats
         run: |
           osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags mapherworld --charts --summary --length highway --update --name stats/mapherworld/Daily/stats --force
       - name: add stats to git
-
         run: |
           git pull
           git config --global user.email "skshitizraj@gmail.com"
@@ -39,7 +38,7 @@ jobs:
           git add -f $base_dir/*
           git commit -m "Updated Daily mapherworld stats"
           git push
-      - name : Tweet stats
+      - name: Tweet stats
         continue-on-error: true
         env: #assign variables
           API_KEY: ${{ secrets.API_KEY }}
@@ -47,6 +46,6 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
-        run : |
+        run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --git $commit_id --tweet '#mapherworld' --name stats/mapherworld/Daily/stats --mention '@openmapping_esa'
