--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.11
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.11
 
       - name: Install Osmium
         run: sudo apt-get install -y osmium-tool
@@ -21,7 +21,7 @@ jobs:
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
-          pip install -e . 
+          python setup.py install 
           pip install tweepy
           pip install -r requirements.txt
 
@@ -37,7 +37,7 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          
+
           base_dir=stats/Global/Weekly
 
           mkdir -p $base_dir
@@ -59,5 +59,3 @@ jobs:
 
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --git $commit_id --name stats/Global/Weekly/stats --tweet 'OSM Last Week' --mention '@openstreetmap'
-          
-
