--- a/.github/workflows/daily_elinino2023.yml
+++ b/.github/workflows/daily_elinino2023.yml
@@ -27,6 +27,7 @@ jobs:
           osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags fao_swalim fao_rtea elinino2023 --charts --summary --length highway --update --name stats/elinino2023/Daily/stats --force
 
       - name: add stats to git
+        continue-on-error: true
         run: |
           git pull
           git config --global user.email "skshitizraj@gmail.com"
