--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -33,6 +33,7 @@ jobs:
           osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats/Global/Daily/stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts  --meta --force
 
       - name: add stats to git
+        continue-on-error: true
 
         run: |
           git pull
