--- a/.github/workflows/daily_mapherworld.yml
+++ b/.github/workflows/daily_mapherworld.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags mapherworld --charts --summary --length highway --update --name stats/mapherworld/Daily/stats --force
       - name: add stats to git
+        continue-on-error: true
         run: |
           git pull
           git config --global user.email "skshitizraj@gmail.com"
