--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -32,6 +32,7 @@ jobs:
           osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags OGAsiaPacific --charts --summary --length highway --update --name stats/OGAsiaPacific/Daily/stats --force
 
       - name: add stats to git
+        continue-on-error: true
         run: |
           git pull
           git config --global user.email "skshitizraj@gmail.com"
