--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -33,6 +33,7 @@ jobs:
           osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags smforst --charts --summary --length highway --update --name stats/smforst/Daily/stats --force --tm_stats
 
       - name: add stats to git
+        continue-on-error: true
 
         run: |
           git pull
