--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -34,6 +34,7 @@ jobs:
           osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats/turkeyeq/Daily/stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats --force --tm_stats
 
       - name: add stats to git
+        continue-on-error: true
 
         run: |
           git pull
