--- a/.github/workflows/monthly_hotosm.yml
+++ b/.github/workflows/monthly_hotosm.yml
@@ -30,6 +30,7 @@ jobs:
           osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats/hotosm/Monthly/stats --all_tags --read_from_metadata stats/hotosm/Monthly/stats_metadata.json --hashtags hotosm --force --charts --summary --workers 8  --meta --temp
 
       - name: add stats to git
+        continue-on-error: true
 
         run: |
           git pull
