--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -38,6 +38,7 @@ jobs:
           osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats/Nepal/Monthly/stats --read_from_metadata stats/Nepal/Monthly/stats_metadata.json --all_tags --summary --charts  --meta --temp
 
       - name: add stats to git
+        continue-on-error: true
 
         run: |
           git pull
