--- a/.github/workflows/daily_elinino2023.yml
+++ b/.github/workflows/daily_elinino2023.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
       - name: Generate Daily Hashtag elinino2023 Stats
         run: |
-          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags fao_swalim fao_rtea elinino2023 --charts --summary --length highway --update --name stats/elinino2023/Daily/stats --force
+          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags fao_swalim fao_rtea elinino2023 --charts --summary --length highway --update --name stats/elinino2023/Daily/stats --force --temp
 
       - name: add stats to git
         continue-on-error: true
