--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -29,7 +29,7 @@ jobs:
           pip install -r requirements.txt
       - name: Generate Daily Hashtag OGAsiaPacific Stats
         run: |
-          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags OGAsiaPacific --charts --summary --length highway --update --name stats/OGAsiaPacific/Daily/stats --force
+          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags OGAsiaPacific --charts --summary --length highway --update --name stats/OGAsiaPacific/Daily/stats --temp --force
 
       - name: add stats to git
         continue-on-error: true
