--- a/.github/workflows/daily_slsibhutan.yml
+++ b/.github/workflows/daily_slsibhutan.yml
@@ -26,7 +26,7 @@ jobs:
           pip install -r requirements.txt
       - name: Generate Daily Hashtag slsibhutan Stats
         run: |
-          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags slsibhutan --charts --summary --length highway --update --name stats/slsibhutan/Daily/stats --force
+          osmsg --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags slsibhutan --charts --summary --length highway --update --name stats/slsibhutan/Daily/stats --temp --force
       - name: add stats to git
         continue-on-error: true
         run: |
