--- a/.github/workflows/weekly_fmtm.yml
+++ b/.github/workflows/weekly_fmtm.yml
@@ -2,9 +2,9 @@ name: Run Weekly Report Field Mapping Tasking Manger
 on:
   schedule:
     - cron: "0 5 * * *" # Run every day at 5 UTC
-  push:
-    branches:
-      - master
+#   push:
+#     branches:
+#       - master
 jobs:
   issue:
     runs-on: ubuntu-latest
