--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 authors = [{name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"}]
 license = {text = "MIT"}
 
+[project.scripts]
+osmsg = "osmsg.app:main"
+
 [tool.poetry.dependencies]
 python = "^3.6"
 osmium = "*"
