--- a/.github/workflows/weekly_fmtm.yml
+++ b/.github/workflows/weekly_fmtm.yml
@@ -1,7 +1,7 @@
 name: Run Weekly Report Field Mapping Tasking Manger
 on:
   schedule:
-    - cron: "0 5 * * *" # Run every day at 5 UTC
+    - cron: "0 0 * * MON" # Run every Monday at 0 UTC
 #   push:
 #     branches:
 #       - master
