--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -37,8 +37,8 @@ jobs:
 
         run: |
           git pull
-          git config --global user.email "skshitizraj@gmail.com"
-          git config --global user.name "kshitijrajsharma"
+          git config --global user.email ${{ secrets.GIT_EMAIL }}
+          git config --global user.name ${{ secrets.GIT_USERNAME }}
           base_dir=stats/smforst/Daily
           mkdir -p $base_dir
 
