--- a/.github/workflows/daily_mapherworld.yml
+++ b/.github/workflows/daily_mapherworld.yml
@@ -31,8 +31,8 @@ jobs:
         continue-on-error: true
         run: |
           git pull
-          git config --global user.email "skshitizraj@gmail.com"
-          git config --global user.name "kshitijrajsharma"
+          git config --global user.email ${{ secrets.GIT_EMAIL }}
+          git config --global user.name ${{ secrets.GIT_USERNAME }}
           base_dir=stats/mapherworld/Daily
           mkdir -p $base_dir
           mv $base_dir/stats_summary.md $base_dir/Readme.md
