--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -35,8 +35,8 @@ jobs:
         continue-on-error: true
         run: |
           git pull
-          git config --global user.email "skshitizraj@gmail.com"
-          git config --global user.name "kshitijrajsharma"
+          git config --global user.email ${{ secrets.GIT_EMAIL }}
+          git config --global user.name ${{ secrets.GIT_USERNAME }}
           base_dir=stats/OGAsiaPacific/Daily
 
           mkdir -p $base_dir
