--- a/.github/workflows/monthly_hotosm.yml
+++ b/.github/workflows/monthly_hotosm.yml
@@ -34,8 +34,8 @@ jobs:
 
         run: |
           git pull
-          git config --global user.email "skshitizraj@gmail.com"
-          git config --global user.name "kshitijrajsharma"
+          git config --global user.email ${{ secrets.GIT_EMAIL }}
+          git config --global user.name ${{ secrets.GIT_USERNAME }}
 
           base_dir=stats/hotosm/Monthly
 
