--- a/.github/workflows/daily_mapherworld.yml
+++ b/.github/workflows/daily_mapherworld.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
-          python setup.py install 
+          pip install osmsg
           pip install tweepy
           pip install -r requirements.txt
       - name: Generate Daily Hashtag mapherworld Stats
