--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
-          python setup.py install 
+          pip install osmsg
           pip install tweepy
           pip install -r requirements.txt
       - name: Generate Daily Hashtag OGAsiaPacific Stats
