--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
-          python setup.py install 
+          pip install osmsg
           pip install tweepy
           pip install -r requirements.txt
 
