--- a/.github/workflows/daily_elinino2023.yml
+++ b/.github/workflows/daily_elinino2023.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           pip install flare-floss
           pip install osmsg
+          pip install -r requirements.txt
           pip install tweepy
 
       - name: Generate Daily Hashtag elinino2023 Stats
