--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           pip install flare-floss
           pip install osmsg
+          pip install -r requirements.txt
           pip install tweepy
 
 
