--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           pip install flare-floss
           pip install osmsg
+          pip install -r requirements.txt
           pip install tweepy
 
 
