fix snrmp stats

--- a/.github/workflows/every_two_days_snrmpnepal.yml
+++ b/.github/workflows/every_two_days_snrmpnepal.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           pip install flare-floss
           pip install tweepy
-          python setup.py install
+          pip install osmsg
 
       - name: Generate Every2days Hashtag SNRMPNepal Stats
         run: |
